# plutus

./: .bazelrc  .cursorignore  .dir-locals.el  .editorconfig  .editorconfig-checker.json  .envrc  .gitattributes  .gitignore  .gitmodules  .hindent.yaml  .hlint.yaml  .ignore  .nix-tools.cache  .psc-ide-port  .readthedocs.yml  .stack-to-nix.cache  .stylish-haskell.yaml  .travis.yml  09-extended.adoc  ARCHITECTURE.adoc  BUILD.bazel  Builtin.lagda  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  DESCRIPTION.md  Evaluation.lagda  Everything.lagda  Examples.lagda  GLOSSARY.adoc  Main.lagda  Makefile  NOTICE  NOTICE.md  PowMod.hs  README.adoc  (+196 more)
MicroHs/: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  Ex  Example.hs  LICENSE  Makefile  Makefile.old  Makefile.windows  MicroHs.cabal  README.md  TODO  updateversion.sh
MicroHs/Tools/: Addcombs.hs  Compress.hs  Count.hs  Decompress.hs  Stats.hs  Uncomb.hs  convertX.sh  mhsc.sh
MicroHs/cpphscompat/: TimeCompat.hs
MicroHs/foo/: Example.hs
MicroHs/ghc/: MHSPrelude.hs  PrimTable.hs
MicroHs/hugs/: MHSPrelude.hs  Main.hs  MiniPrelude.hs  PrimTable.hs
MicroHs/lib/: AllOfLib.hs  Foreign.hs  MiniPrelude.hs  Numeric.hs  Prelude.hs  Primitives.hs  libs.cabal
MicroHs/mhs/: MHSPrelude.hs  PrimTable.hs
MicroHs/paths/: Paths_MicroHs.hs
MicroHs/tests/: Arith.hs  Arith.ref  Array.hs  Array.ref  Bang.hs  Bang.ref  BindPat.hs  BindPat.ref  BitCount.hs  BitCount.ref  Block.hs  Bounded.hs  Bounded.ref  ByteStringIO.hs  ByteStringIO.ref  Bytestring.hs  Bytestring.ref  CString.hs  CString.ref  Case.hs  Case.ref  Catch.hs  Catch.ref  Class.hs  Class.ref  Coerce.hs  Coerce.ref  Concur.hs  Concur.ref  Cpp.hs  Default.hs  Default.ref  Delay.hs  Delay.ref  Deriving.hs  Deriving.ref  DfltSig.hs  DfltSig.ref  Dict.hs  Dict.ref  (+140 more)
MicroHs/unicode/: Makefile  UniParse.hs
bench-primitives/: LICENSE  README.md  bench-primitives.cabal
bench-primitives/bench/: Bench.hs
cardano-constitution/: .gitignore  NOTICE  README.md  cardano-constitution.cabal
cardano-constitution-engine/: cardano-constitution-engine.cabal
cardano-constitution-engine/data/: config.schema.json
cardano-constitution-engine/test/: Driver.hs
cardano-constitution/certification/: documentation-traceability.md  testing-traceability.md
cardano-constitution/data/: defaultConstitution.json  defaultConstitution.schema.json
cardano-constitution/test/: Driver.hs
cardano-streaming/: CHANGELOG.md  README.md  cardano-streaming.cabal
cardano-streaming/examples/: Common.hs  Example1.hs  Example2.hs  Orphans.hs
core-to-plc/: BUILD.bazel  core-to-plc.cabal  shell.nix
core-to-plc/test/: IllTyped.hs  Spec.hs  basicNewtype.plc.golden  blocknum.plc.golden  bool.plc.golden  bytestring.plc.golden  defaultCase.plc.golden  enum.plc.golden  error.plc.golden  even3.plc.golden  even4.plc.golden  fib.plc.golden  free.plc.golden  ifThenElse.plc.golden  ifThenElseApply.plc.golden  intCompare.plc.golden  intEq.plc.golden  intEqApply.plc.golden  intPlus.plc.golden  integer.plc.golden  letFun.plc.golden  list.plc.golden  listConstDest.plc.golden  listConstruct.plc.golden  listConstruct2.plc.golden  listMatch.plc.golden  monoCase.plc.golden  monoConstructed.plc.golden  monoConstructor.plc.golden  monoDataType.plc.golden  monoK.plc.golden  nestedNewtypeMatch.plc.golden  newtypeCreate2.plc.golden  newtypeMatch.plc.golden  nonValueCase.plc.golden  polyConstructed.plc.golden  polyDataType.plc.golden  ptreeMatch.plc.golden  string.plc.golden  sum.plc.golden  (+3 more)
debug-dump/: CHANGELOG.md  README.md  debug-dump.cabal
deployment-server/: ARCHITECTURE.adoc  ChangeLog.md  README.md  deployment-server.cabal  pr-test.json  prevent.json
deployment-server/app/: Main.hs
doc/: README.md  RELEASE.adoc  TRIAGE.md  TRIAGING.md  bibliography.bib  conf.py  default.nix  index.rst  plutus-doc.cabal  product-mindset.md  requirements.txt  troubleshooting.rst
doc/adr/: README.md  (+5 more)
example/: .gitignore  ARCHITECTURE.adoc  README.md  cabal.project  cabal.project.freeze  configuration.nix  example.cabal  hie.project  hie.project.local  hie.yaml  shell.nix
fake-pab/: README.md  default.nix  fake-pab.cabal  fake-pab.sql
freer-extras/: CHANGELOG.md  README.md  freer-extras.cabal
interpreter/: interpreter.cabal  shell.nix
iots-export/: .gitignore  ARCHITECTURE.adoc  README.md  iots-export.cabal
language-plutus-core/: .hlint.yaml  .stylish-haskell.yaml  .travis.yml  ARCHITECTURE.adoc  BUILD.bazel  Justfile  README.md  Setup.hs  TODO.md  appveyor.yml  cabal.project  cabal.project.local  cabal.project.new  language-plutus-core.cabal  shell.nix  stack.yaml
language-plutus-napkin/: .hlint.yaml  .stylish-haskell.yaml  README.md  cabal.project.local  language-plutus-core.cabal  language-plutus-napkin.cabal  stack.yaml
marlowe/: ARCHITECTURE.adoc  marlowe.cabal  shell.nix
marlowe-actus/: ARCHITECTURE.adoc  ContractTerms.json  NamFs.marlowe  PamFs.hs  PamFs.marlowe  README.md  marlowe-actus.cabal
marlowe-actus-theory/: ARCHITECTURE.adoc  PayOff.agda  README.md  marlowe-actus-theory.cabal
marlowe-cardano-minimal/: .gitignore  README.md  analysis.ipynb  marlowe-cardano-minimal.cabal  marlowe-rolepayout.plutus  marlowe-semantics.plutus
marlowe-dashboard-server/: README.md  marlowe-dashboard-server.cabal
marlowe-hspec/: README.md  marlowe-hspec.cabal
marlowe-playground-server/: ARCHITECTURE.adoc  README.md  lambda.nix  marlowe-playground-server.cabal  meadow.yaml  playground.yaml.sample
marlowe-symbolic/: ARCHITECTURE.adoc  LICENSE  README.md  brittany.yaml  lambda.nix  marlowe-symbolic.cabal
meadow/: LICENSE  README.md  meadow.cabal
metatheory/: ARCHITECTURE.adoc  Algorithmic.lagda  Builtin.lagda  Check.lagda.md  Declarative.lagda  Everything.lagda  LICENSE.txt  Machine.lagda.md  Main.hs  Main.lagda  Opts.hs  README.md  Raw.hs  Raw.lagda  Scoped.hs  Scoped.lagda  Setup.hs  Test.hs  TestDetailed.hs  TestNEAT.hs  TestSimple.hs  Type.lagda  Untyped.lagda  Utils.lagda  build.txt  default.nix  index.html  metatheory.cabal  plc-agda.cabal  plc-agda.nix
(+91328 files in other folders)
