cabal-version:   3.0
name:            plutus-tx-template
version:         0.2.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

executable plutus-tx-template
  import:           warnings
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          examples_in_tx.hs
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , plutus-core        ^>=1.34.1.0
    , plutus-ledger-api  ^>=1.34.1.0
    , plutus-tx          ^>=1.34.1.0
    , plutus-tx-plugin   ^>=1.34.1.0
    , text
    , time
    , flat
