cabal-version: 1.18
name: bench-primitives
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2019 Input Output
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
synopsis: Benchmarks for Plutus Core builtins
description:
    Simple-minded benchmarks for Plutus Core builtins
category: Benchmarks
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output/plutus

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

benchmark bench-primitives-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5,
        criterion -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
