cabal-version:      3.0
name:               cardano-constitution-engine
version:            1.31.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         nikolaos.bezirgiannis@iohk.io
author:             Plutus Core Team
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/config.schema.json

source-repository head
  type:     git
  location: https://github.com/IntersectMBO/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

common os-support
  if (impl(ghcjs) || os(windows))
    buildable: False

library
  import:           lang, ghc-version-support, os-support
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Cardano.Constitution.Config
    Cardano.Constitution.Config.Instance.FromJSON
    Cardano.Constitution.Config.Instance.TxLift
    Cardano.Constitution.Config.Types
    Cardano.Constitution.DataFilePaths
    Cardano.Constitution.Validator.Common
    Cardano.Constitution.Validator.Sorted
    Cardano.Constitution.Validator.Unsorted
    PlutusTx.NonCanonicalRational

  build-depends:
    , aeson
    , base               >=4.9   && <5
    , containers
    , filepath
    , plutus-core        ^>=1.31
    , plutus-ledger-api  ^>=1.31
    , plutus-tx          ^>=1.31
    , plutus-tx-plugin   ^>=1.31
    , regex-tdfa
    , safe
    , template-haskell
