cabal-version:      3.0
name:               cardano-constitution
version:            1.21.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         michael.peyton-jones@iohk.io
author:             Michael Peyton Jones
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/defaultConstitution.json
  data/defaultConstitution.schema.json

source-repository head
  type:     git
  location: https://github.com/IntersectMBO/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

library
  import:           lang, ghc-version-support
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Cardano.Constitution.Config.Default
    Cardano.Constitution.Config.Predicate
    Cardano.Constitution.Config.Predicate.Default
    Cardano.Constitution.Config.Predicate.DefaultUnresolved
    Cardano.Constitution.Config.Predicate.TH
    Cardano.Constitution.Config.Predicate.Types
    Cardano.Constitution.Config.Static.Default
    Cardano.Constitution.Config.Static.TH
    Cardano.Constitution.Config.Types
    Cardano.Constitution.DataFilePaths
    Cardano.Constitution.Validator.Common
    Cardano.Constitution.Validator.Sorted.NonStatic
    Cardano.Constitution.Validator.Sorted.Static
    Cardano.Constitution.Validator.Unsorted.NonStatic
    Cardano.Constitution.Validator.Unsorted.Static
    PlutusTx.SortedMap

  build-depends:
    , aeson
    , base               >=4.9   && <5
    , containers
    , filepath
    , plutus-core        ^>=1.21
    , plutus-ledger-api  ^>=1.21
    , plutus-tx          ^>=1.21
    , plutus-tx-plugin   ^>=1.21
    , template-haskell
