cabal-version:      3.0
name:               cardano-constitution
version:            1.56.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         nikolaos.bezirgiannis@iohk.io
author:             Plutus Core Team
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/defaultConstitution.json
  data/defaultConstitution.schema.json

source-repository head
  type:     git
  location: https://github.com/IntersectMBO/plutus

flag force-build
  description: Enables the building of executable create-json-envelope
  manual:      True
  default:     False

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

common os-support
  if (impl(ghcjs) || os(windows))
    buildable: False

library
  import:           lang, ghc-version-support, os-support
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Cardano.Constitution.Config
    Cardano.Constitution.Config.Instance.FromJSON
    Cardano.Constitution.Config.Instance.TxLift
    Cardano.Constitution.Config.Types
    Cardano.Constitution.Data.Validator
    Cardano.Constitution.DataFilePaths
    Cardano.Constitution.Validator
    Cardano.Constitution.Validator.Common
    Cardano.Constitution.Validator.Data.Common
    Cardano.Constitution.Validator.Data.Sorted
    Cardano.Constitution.Validator.Data.Unsorted
    Cardano.Constitution.Validator.Sorted
    Cardano.Constitution.Validator.Unsorted
    PlutusTx.NonCanonicalRational

  build-depends:
    , aeson
    , base               >=4.9   && <5
    , containers
    , filepath
    , plutus-core        ^>=1.56
    , plutus-ledger-api  ^>=1.56
    , plutus-tx          ^>=1.56
    , plutus-tx-plugin   ^>=1.56
    , regex-tdfa
    , safe
    , template-haskell

test-suite cardano-constitution-test
  import:           lang, ghc-version-support, os-support
  hs-source-dirs:   test
  default-language: Haskell2010

  -- NOTE: Running above N8 actually makes things slower, so
  -- manually turn this down if you are on a higher-core machine.
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  main-is:          Driver.hs
  other-modules:
    Cardano.Constitution.Config.Tests
    Cardano.Constitution.Validator.Data.GoldenTests
    Cardano.Constitution.Validator.Data.PropTests
    Cardano.Constitution.Validator.Data.TestsCommon
    Cardano.Constitution.Validator.Data.UnitTests
    Cardano.Constitution.Validator.GoldenTests
    Cardano.Constitution.Validator.PropTests
    Cardano.Constitution.Validator.TestsCommon
    Cardano.Constitution.Validator.UnitTests
    Helpers.CekTests
    Helpers.Farey
    Helpers.Guardrail
    Helpers.Intervals
    Helpers.MultiParam
    Helpers.Spec.FareySpec
    Helpers.Spec.IntervalSpec
    Helpers.TestBuilders
    PlutusLedgerApi.V3.ArbitraryContexts

  build-depends:
    , aeson
    , base                             >=4.9   && <5
    , bytestring
    , cardano-constitution
    , containers
    , directory
    , filepath
    , plutus-core                      ^>=1.56
    , plutus-core:plutus-core-testlib
    , plutus-ledger-api                ^>=1.56
    , plutus-tx                        ^>=1.56
    , QuickCheck
    , serialise
    , tasty
    , tasty-expected-failure
    , tasty-golden
    , tasty-hunit
    , tasty-json
    , tasty-quickcheck

executable create-json-envelope
  import:         lang, ghc-version-support, os-support
  hs-source-dirs: app/create-json-envelope
  main-is:        Main.hs
  build-depends:
    , base
    , cardano-constitution
    , plutus-ledger-api     ^>=1.56
