cabal-version: 1.18
name: core-to-plc
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Input Output
maintainer: michael.peyton-jones@iohk.io
author: Michael Peyton Jones
synopsis: GHC Core to Plutus Core compiler
description:
    Complier that converts GHC Core to Plutus Core
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-prototype

library
    exposed-modules:
        Language.Plutus.CoreToPLC.Plugin
        Language.Plutus.CoreToPLC.Error
    other-modules:
        Language.Plutus.CoreToPLC
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
    build-depends:
        base >=4.9 && <5,
        ghc -any,
        template-haskell -any,
        language-plutus-core -any,
        containers -any,
        mtl -any,
        transformers -any,
        bytestring -any,
        text -any,
        prettyprinter -any,
        mmorph -any

test-suite core-to-plc-plugin
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <5,
        core-to-plc -any,
        language-plutus-core -any,
        bytestring -any,
        text -any,
        tasty -any,
        tasty-hunit -any,
        tasty-golden -any
