cabal-version: 1.18
name: debug-dump
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE NOTICE
copyright: Copyright: (c) 2019 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
homepage: https://github.com/vmchale/debug-dump#readme
synopsis: File-based debug output
description:
    A package emulating the functionality of Debug.Trace, but capable of writing to files
category: Debug
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus
    subdir: debug-dump

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Debug.Trace.Dump
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5,
        text -any,
        bytestring -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
