cabal-version: 2.0
name:           deployment-server
version:        0.1.0.0
description:    Continuous Delivery server for Plutus Playgrounds
author:         David Smith
maintainer:     david.smith@tweag.io
license:        Apache-2.0
license-files:
  LICENSE
build-type:     Simple
extra-doc-files:
    README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

library
  exposed-modules:
      Deploy.Server
      Deploy.Types
      Deploy.Worker
  other-modules:
  hs-source-dirs:
      src
  build-depends:
        base
      , aeson
      , bytestring
      , directory
      , github-webhooks
      , mtl
      , newtype-generics
      , optparse-generic
      , servant
      , servant-github-webhook
      , servant-server
      , slack-web
      , temporary
      , typed-process
      , text
      , wai
  default-language: Haskell2010
  ghc-options: -fprint-potential-instances

executable deployment-server-exe
  main-is: Main.hs
  other-modules:
      Paths_deployment_server
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , deployment-server
    , newtype-generics
    , optparse-generic
    , servant-github-webhook
    , slack-web
    , text
    , warp
  default-language: Haskell2010

test-suite deployment-server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_deployment_server
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , deployment-server
  default-language: Haskell2010
