cabal-version: 2.2
name: plutus-doc
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer: jann.mueller@iohk.io
author: Michael Peyton Jones, Jann Mueller
synopsis: Plutus documentation
description: Plutus documentation
category: Language
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable MultiParamTypeClasses
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

    if flag(defer-plugin-errors)

executable doc-doctests
    import: lang
    hs-source-dirs: plutus/tutorials
    main-is: Main.hs
    ghc-options: -Wno-unused-imports
    build-tool-depends: doctest:doctest -any
    other-modules:
      BasicPlutusTx
      BasicValidators
      BasicPolicies
      BasicApps
      GameModel
      HelloWorldApp
    build-depends:
      base >=4.9 && <5,
      template-haskell >=2.13.0.0,
      bytestring -any,
      cardano-api -any,
      plutus-core -any,
      plutus-tx -any,
      plutus-ledger -any,
      plutus-contract -any,
      playground-common -any,
      plutus-use-cases -any,
      prettyprinter -any,
      containers -any,
      freer-extras -any,
      lens -any,
      serialise -any,
      QuickCheck -any,
      random -any,
      text -any,
      aeson -any

    if !(impl(ghcjs) || os(ghcjs))
        build-depends: plutus-tx-plugin -any
