cabal-version: 1.12

name:           example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/example#readme>
homepage:       https://github.com/githubuser/example#readme
bug-reports:    https://github.com/githubuser/example/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/example

library
  exposed-modules:
      Lib
  other-modules:
  hs-source-dirs:
      src
  ghc-options: -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints -Widentities
               -- See Plutus Tx readme
               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , hashable
    , iots-export
    , mtl
    , plutus-core
    , plutus-tx
    , plutus-contract
    , playground-common
    , plutus-ledger
    , template-haskell
    , lens
    , text
    , prettyprinter
  if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                      DeriveTraversable MultiParamTypeClasses
  default-language: Haskell2010

executable example-exe
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , example
    , plutus-contract
  default-language: Haskell2010

test-suite example-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
               -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints -Widentities -rtsopts
               -- See Plutus Tx readme
               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , example
    , hashable
    , hedgehog
    , plutus-core
    , plutus-tx
    , plutus-contract
    , plutus-ledger
    , prettyprinter
    , tasty
    , tasty-hunit
    , tasty-hedgehog >=0.2.0.0
    , tasty-golden
    , text
    , lens
    , mtl
  if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin
  default-language: Haskell2010
